--- a/.github/workflows/build-source.yml
+++ b/.github/workflows/build-source.yml
@@ -17,17 +17,17 @@ jobs:
     steps:
       - name: Checkout repos
         uses: actions/checkout@v4
-      - name: Setup Node.js 20.x
+      - name: Setup Node.js 22.x
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 22.x
       - name: Update package.json
         run: npm version ${{vars.BUILD_VERSION}} --no-git-tag-version
       - name: Update microsoft-identity-association.json
         shell: pwsh
         run: |
           $content = Get-Content -Path ${{env.FILE_PATH}}
-          $content = $content -replace "{{APP_CLIENT_ID}}", "${{vars.APP_CLIENT_ID}}"
+          $content = $content -replace "{{MSAL_APP_ID}}", "${{vars.MSAL_APP_ID}}"
           Out-File -FilePath ${{env.FILE_PATH}} -InputObject $content -Encoding UTF8
         env:
           FILE_PATH: public/.well-known/microsoft-identity-association.json
@@ -36,9 +36,9 @@ jobs:
         run: |
           $content = Get-Content -Path ${{env.FILE_PATH}}
           $content = $content -Replace "{{TELEMETRY_CONNECTION_STRING}}", "${{vars.TELEMETRY_CONNECTION_STRING}}"
-          $content = $content -Replace "{{APP_TENANT_ID}}", "${{vars.APP_TENANT_ID}}"
-          $content = $content -Replace "{{APP_CLIENT_ID}}", "${{vars.APP_CLIENT_ID}}"
-          $content = $content -Replace "{{APP_DOMAIN_NAME}}", "${{vars.APP_DOMAIN_NAME}}"
+          $content = $content -Replace "{{MSAL_TENANT_ID}}", "${{vars.MSAL_TENANT_ID}}"
+          $content = $content -Replace "{{MSAL_APP_ID}}", "${{vars.MSAL_APP_ID}}"
+          $content = $content -Replace "{{HOST_NAME}}", "${{vars.HOST_NAME}}"
           Out-File -FilePath ${{env.FILE_PATH}} -InputObject $content -Encoding UTF8
         env:
           FILE_PATH: .env
